--- a/miniprogram/pages/manage/operation/index.wxml
+++ b/miniprogram/pages/manage/operation/index.wxml
@@ -9,15 +9,21 @@
 <!-- 店铺 -->
 <shopBar bind:onShopChange="onShopChange"></shopBar>
 <block wx:if="{{!isLoading}}">
-    <view class="container">
+    <view wx:if="{{categories&&categories.length>0}}" class="container">
         <view class="title">
             <view wx:if="{{!isMainChartDisplay}}" class="back-btn" bindtap="backToMainChart">返回</view>
             {{chartTitle}}
         </view>
         <canvas canvas-id="columnCanvas" class="canvas" bindtouchstart="touchHandler"></canvas>
-        <view style="text-align:center">点击数据每一项查看详情</view>
+        <!-- <view style="text-align:center">点击数据每一项查看详情</view> -->
     </view>
 
-    <canvas canvas-id="lineCanvas" disable-scroll="true" class="canvas" bindtouchstart="touchHandlerLine"></canvas>
+    <!-- 无数据 -->
+    <block wx:else>
+        <view style="text-align: center;margin-top: 20vh;">
+            <image style="width: 50vw;" src="../../../images/icons/no-data.svg" mode="widthFix" />
+            <view style="top: -240rpx;">暂无数据</view>
+        </view>
+    </block>
 
 </block>
