--- a/miniprogram/pages/shop-manage/index.wxml
+++ b/miniprogram/pages/shop-manage/index.wxml
@@ -11,7 +11,7 @@
 </view>
 <scroll-view refresher-enabled="true" bindrefresherrefresh="getUser" refresher-triggered="{{isRefreshing}}" style="height: {{containerHeight - 120}}rpx;position: relative;">
     <view class="flex justify-between">
-        <view class="margin text-gray" bind:tap="gotoSettingPage"> {{userInfo.name?'欢迎您，超级管理员 '+ userInfo.name : '未设置昵称'}}</view>
+        <view class="margin text-gray" bind:tap="gotoSettingPage"> {{userInfo.name?'欢迎您，店长 '+ userInfo.name : '未设置昵称'}}</view>
     </view>
 
     <view class="cu-card">
@@ -26,7 +26,7 @@
         <!-- 店长管理员 -->
         <view class="cu-item shadow-warp padding" style="min-height: 240rpx;border-radius: 32rpx;">
             <view class="text-gray text-sm">
-                店长管理员
+                店长
             </view>
             <view class="flex justify-around">
                 <view style="text-align: center;">
@@ -53,7 +53,7 @@
         <view class="grid col-4 margin-bottom text-center">
             <view class="setting_item" bind:tap="gotoBuyManage">
                 <image class="setting_icon" src="../../images/icons/cggl.svg" />
-                <view class="text-gray text-xs">采购管理</view>
+                <view class="text-gray text-xs">支出管理</view>
             </view>
             <view class="setting_item" bind:tap="gotoBillPage">
                 <image class="setting_icon" style="padding: 6rpx;" src="../../images/icons/zdjl.svg" />
@@ -94,7 +94,7 @@
                 <view class="cu-item" wx:for="{{roleList}}" wx:key='index'>
                     <label class="flex justify-between align-center flex-sub">
                         <view class="flex-sub">{{item.text}}</view>
-                        <radio value="{{item.value}}" class="round" checked="{{false}}">
+                        <radio value="{{item.value}}" class="round" checked="{{item.checked}}">
                         </radio>
                     </label>
                 </view>
