--- a/miniprogram/pages/super-manage/index.wxml
+++ b/miniprogram/pages/super-manage/index.wxml
@@ -91,7 +91,7 @@
                 <view class="cu-item" wx:for="{{roleList}}" wx:key='index'>
                     <label class="flex justify-between align-center flex-sub">
                         <view class="flex-sub">{{item.text}}</view>
-                        <radio value="{{item.value}}" class="round" checked="{{false}}">
+                        <radio value="{{item.value}}" class="round" checked="{{item.checked}}">
                         </radio>
                     </label>
                 </view>
