--- a/miniprogram/pages/shop-manage/spend-management/index.wxml
+++ b/miniprogram/pages/shop-manage/spend-management/index.wxml
@@ -1,79 +1,59 @@
 <!--pages/shop-manage/spend-management/index.wxml-->
-<cu-custom bgColor="bg-white" isBack="{{false}}">
-  <view slot="backText">返回</view>
-  <view slot="content">支出管理</view>
+<wxs src="../../format.wxs" module="filter" />
+<cu-custom bgColor="bg-white" isBack="{{true}}">
+    <view slot="backText">返回</view>
+    <view slot="content">支出管理</view>
 </cu-custom>
 
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
-  <view class='gray-text text-xs'>加载中...</view>
+    <view class='gray-text text-xs'>加载中...</view>
 </view>
-<block wx:else>
-  <scroll-view>
-    <view class="cu-list menu">
-      <view class="cu-item" wx:for="{{listSpend}}" wx:key="index">
-        <view class="content">
-          <view>
-            支出项：{{item.name}}
-          </view>
-          <view class="flex text-gray text-sm" style="gap: 18rpx;">
-            <view>
-              单价：￥{{item.price}}
-            </view>
-            <view>
-              数量：{{item.number}}
-            </view>
-            <view>
-              金额：￥{{item.money}}
-            </view>
-          </view>
-        </view>
-        <view class="action">
-          <text bind:tap="removeItem" data-item="{{item}}" class="cuIcon-move bg-blue" style="border-radius: 50%;"></text>
-        </view>
-      </view>
+<!-- 数据加载完毕 -->
+<block wx:if="{{ !isLoading }}">
+    <!-- 有数据 -->
+    <view wx:if="{{ spend.length >= 1 }}">
+        <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="getSpend" refresher-triggered="{{isRefreshing}}" bindscrolltolower="loadMore">
+            <block wx:for="{{ spend }}" wx:for-item="spendDetail" wx:key="_id" wx:for-index="index">
+                <view class="cu-card">
+                    <view class="cu-item shadow">
+                        <block wx:for="{{ spendDetail.listSpend }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
+                            <view class="cu-list menu">
+                                <view class="cu-item">
+                                    <view class="content">
+                                        <view class="text-grey">{{ goodsDetail.name }}</view>
+                                        <view class="text-gray text-sm flex" style="gap: 21rpx;">
+                                            <view style="color: gray;">单价：¥ {{ goodsDetail.price / 100 }}</view>
+                                            <view class="text-gray text-sm">
+                                                数量：X{{ goodsDetail.number}}
+                                            </view>
+                                        </view>
+                                    </view>
+                                </view>
+                            </view>
+                        </block>
+                        <view class="content padding flex align-center justify-between">
+                            <view>
+                                {{filter.format(spendDetail.createDate, 'YY-MM-DD hh:mm:ss')}}
+                            </view>
+                            <view class="flex" style="gap: 9rpx;">
+                                <button bind:tap="handleEdit" data-item="{{spendDetail}}" class="cu-btn sm  bg-blue" style="width: 50rpx;height: 50rpx;border-radius: 50%;">
+                                    <text class="cuIcon-edit"></text>
+                                </button>
+                                <button bind:tap="handleDelete" data-item="{{item}}" class="cu-btn sm  bg-red" style="width: 50rpx;height: 50rpx;border-radius: 50%;">
+                                    <text class="cuIcon-delete"></text>
+                                </button>
+                            </view>
+                        </view>
+                    </view>
+                </view>
+            </block>
+        </scroll-view>
     </view>
-  </scroll-view>
-  <view class="flex padding align-center" style="position: fixed;bottom: 30rpx;gap: 18rpx;width: 100vw;">
-    <button bind:tap="submit" class="cu-btn round bg-blue lg" style="width: 80%;">提交</button>
-    <button bind:tap="showAddDialog" class="cu-btn round bg-blue sm" style="width: 20%;">
-      <text class="cuIcon-add" ></text>添加
-    </button>
-  </view>
-
+    <!-- 无数据 -->
+    <block wx:else>
+        <view style="text-align: center;margin-top: 20vh;">
+            <image style="width: 50vw;" src="../../../images/icons/no-data.svg" mode="widthFix" />
+            <view style="top: -240rpx;">暂无数据</view>
+        </view>
+    </block>
 </block>
-<view class="cu-modal bottom-modal {{showDialogAdd?'show':''}}">
-  <view class="cu-dialog">
-    <view class="cu-bar bg-white text-lg justify-center align-center">
-      添加支出项
-    </view>
-    <view class="padding bg-white">
-      <form catchsubmit="formSubmit" catchreset="formReset">
-        <view class="cu-form-group ">
-          <view class="title">支出项</view>
-          <input name="name" placeholder="请填写支出项目..."></input>
-        </view>
-        <view class="cu-form-group">
-          <view class="title">数量</view>
-          <input name="number" type="number" value="{{number}}" placeholder="请填写数量..." bindinput="numberInput"></input>
-        </view>
-        <view class="cu-form-group">
-          <view class="title">单价</view>
-          <input name="price" type="digit" value="{{price}}" bindinput="priceInput" placeholder="单价和金额只需填其一..."></input>
-        </view>
-        <view class="cu-form-group">
-          <view class="title">金额</view>
-          <input name="money" type="digit" value="{{money}}" bindinput="moneyInput" placeholder="单价和金额只需填其一..."></input>
-        </view>
-
-        <view class="cu-form-group align-start">
-          <view class="title">备注</view>
-          <textarea name="remarks" maxlength="300" placeholder="请输入备注..."></textarea>
-        </view>
-        <view class="flex padding" style="gap: 8px">
-          <button class="cu-btn round bg-blue" formType="submit">添加</button>
-          <button class="cu-btn round bg-black" formType="reset">取消</button>
-        </view>
-      </form>
-    </view>
-  </view>
-</view>
