--- a/miniprogram/pages/shop-manage/spend-management-edit/index.wxml
+++ b/miniprogram/pages/shop-manage/spend-management-edit/index.wxml
@@ -1,5 +1,5 @@
 <!--pages/shop-manage/spend-management/index.wxml-->
-<cu-custom bgColor="bg-white" isBack="{{false}}">
+<cu-custom bgColor="bg-white" isBack="{{true}}">
     <view slot="backText">返回</view>
     <view slot="content">支出管理</view>
 </cu-custom>
